human-intervention-logs/org.modelmapper:modelmapper:3.2.0/gradle-test/gradle-test-2026-05-07T04-20-32-821428Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.modelmapper:modelmapper:3.2.0
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 20 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:18: error: Dispatcher has protected access in UsingUnsafe
import org.modelmapper.internal.bytebuddy.dynamic.loading.ClassInjector.UsingUnsafe.Dispatcher;
                                                                                   ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:19: error: Dispatcher has protected access in UsingUnsafe
import org.modelmapper.internal.bytebuddy.dynamic.loading.ClassInjector.UsingUnsafe.Dispatcher.CreationAction;
                                                                                   ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:53: error: Dispatcher has protected access in UsingUnsafe
    private static Class<?> defineGeneratedType(Dispatcher dispatcher) {
                                                ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:30: error: package Dispatcher does not exist
            Dispatcher.Initializable initializable = CreationAction.INSTANCE.run();

> Task :compileTestJava
                      ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:30: error: package CreationAction does not exist
            Dispatcher.Initializable initializable = CreationAction.INSTANCE.run();
                                                                   ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:33: error: Dispatcher has protected access in UsingUnsafe
                Dispatcher dispatcher = initializable.initialize();
                ^

> Task :compileTestJava FAILED
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:18: error: Dispatcher has protected access in UsingUnsafe
  import org.modelmapper.internal.bytebuddy.dynamic.loading.ClassInjector.UsingUnsafe.Dispatcher;
                                                                                     ^
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:19: error: Dispatcher has protected access in UsingUnsafe
  import org.modelmapper.internal.bytebuddy.dynamic.loading.ClassInjector.UsingUnsafe.Dispatcher.CreationAction;
                                                                                     ^
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:53: error: Dispatcher has protected access in UsingUnsafe
      private static Class<?> defineGeneratedType(Dispatcher dispatcher) {
                                                  ^
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:33: error: Dispatcher has protected access in UsingUnsafe
                  Dispatcher dispatcher = initializable.initialize();
                  ^
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:30: error: package Dispatcher does not exist
              Dispatcher.Initializable initializable = CreationAction.INSTANCE.run();
                        ^
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/src/test/java/org_modelmapper/modelmapper/ClassInjectorInnerUsingUnsafeInnerDispatcherInnerCreationActionTest.java:30: error: package CreationAction does not exist
              Dispatcher.Initializable initializable = CreationAction.INSTANCE.run();
                                                                     ^
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 15s

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/tests/src/org.modelmapper/modelmapper/3.2.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/426-844a53f9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.modelmapper:modelmapper:3.2.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 19s
9 actionable tasks: 1 executed, 8 up-to-date
